# koda

./: .env  .gitattributes  .gitignore  README.md  README.txt  agents.py  analysis_report.md  config.py  deppseekXfed.py  evaluation_pipeline.py  evaluation_pipeline_eval.py  graph_builder.py  graph_handler.py  knowledge_graph.py  llm_setup.py  llm_setup_eval.py  main.py  main1.py  main_agents.py  main_gemini.py  maingemini_revision.py  neo4j_handler.py  pipeline.py  pipeline1.py  pipeline1_eval.py  pipeline_evaluation_comments.txt  pipeline_evaluation_comments_gpt-3.5-turbo.txt  pipeline_evaluation_comments_gpt-4o.txt  pipeline_evaluation_results.json  pipeline_evaluation_results_by_generator.json  requirements.txt  schema.py  tasks.py  test.py  tools.py
agents/: agents.py  tasks.py
config/: paths.py
data/: faiss_index.index  graph.gpickle  pairwise_results.csv  reaction_info.json
geneKnockout/: accessions.txt  essential_drug_target_genes.json  gene_df_info.csv  strain_with_NCBIids.csv  (+1 more)
microflow/: README.md  pyproject.toml  setup.py
microflow/data/: ListofModelsforSpecies.csv  SamplesSpeciesRelativeAbundance_modified_final.csv  anaerobic_strains.csv  subsystem_scores_per_microbe.csv  vmh_metabolite_cache.csv
microflow/src/: report.md
microflow/src/microflow/: main.py
microflow/src/microflow/crews/compbio_crew/: __init__.py  compbio_crew.py
microflow/src/microflow/crews/compbio_crew/config/: agents.yaml  tasks.yaml
microflow/src/microflow/dbs/: microbiome_graph.py
microflow/src/microflow/tools/: custom_tool.py  neo4j_tool.py  neo4j_utils.py
(+21 files in other folders)
